--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,21 @@
         android:textSize="32sp"
         android:text="Tasks"/>
 
-<androidx.recyclerview.widget.RecyclerView
+    <ImageView
+        android:id="@+id/logoutbtn"
+        android:layout_width="74dp"
+        android:layout_height="57dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="301dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="35dp"
+        android:layout_marginBottom="654dp"
+        android:src="@drawable/ic_logout_24" />
+
+    <androidx.recyclerview.widget.RecyclerView
     android:id="@+id/tasksRecyclerView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -34,5 +48,7 @@
         android:layout_margin="32dp"
         android:backgroundTint="@android:color/holo_green_dark"
         android:src="@drawable/ic_baseline_add"/>
+
+
 
 </RelativeLayout>
