--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,9 +2,11 @@
 <resources>
     <color name="colorPrimary">@android:color/holo_green_dark</color>
     <color name="colorPrimaryDark">@android:color/holo_green_dark</color>
-    <color name="colorAccent">@color/white</color>
+    <color name="colorAccent">@android:color/white</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="CPD">#3262C4</color>
+    <color name="CB">#000000</color>
+    <color name="CW">#FFFFFF</color>
 </resources>
