--- a/app/src/main/res/layout/task_layout.xml
+++ b/app/src/main/res/layout/task_layout.xml
@@ -29,7 +29,7 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentRight="true"
             android:layout_marginTop="05dp"
-            android:text=04/01/2021 />
+            android:text="04/01/2021" />
     </RelativeLayout>
 
 
